adjust SEO friendly and CSS

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin-top: 100px;
+  margin: 100px 0;
 }
 
 h1,
@@ -48,6 +48,9 @@ p {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
+}
+.primary-link:hover {
+  color: pink;
 }
 
 .secondary-link {
